<?xml version="1.0"?>
<package format="2">
  <name>lidar_calibration</name>
  <version>0.0.1</version>
  <description>The lidar_calibration package</description>
  
  <maintainer email="cyun@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  
  <export>
    <!-- <build_type>cmake</build_type> -->
  </export>
</package>
